# notion-notebook

./: AGENTS.md  README.md  pyproject.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.docs/: spec.md
docs/notebooks/: no-plots.md  plots.md
notebooks/: _inject_export_cell.py
notebooks/demo/: no-plots.ipynb  plots.ipynb
notebooks/demo-local/: no-plots.ipynb  plots.ipynb
notebooks/demo-notion/: no-plots.ipynb  plots.ipynb
notebooks/og-notebooks/: _fill_plot_cell.py  _patch_export_images.py  notion-connection.ipynb
src/notion_notebook/: __init__.py  config.py  exceptions.py  exporter.py  extracted_figure.py  figure_database_manager.py  git_utils.py  ipython_magic.py  jupyter_hooks.py  local_exporter.py  markdown_notion.py  notebook_parser.py  notion_client.py  notion_converter.py  page_resolve.py  utils.py
tests/: test_config.py  test_figure_database_manager.py  test_git_utils.py  test_ipython_magic.py  test_local_exporter.py  test_markdown_notion.py  test_notebook_parser.py  test_notion_client.py  test_notion_converter.py  test_package_import.py  test_page_resolve.py  test_utils.py
tests/fixtures/: simple.ipynb  with_image.ipynb
